syntax = "proto3";

option csharp_namespace = "Protos.Checkpoints.AddCheckpoint";

package addcheckpoint;

message AddCheckpointResponse {
  string Id = 1;
}